Bug 298861 - Kontact crashes when switching to summary.
Summary: Kontact crashes when switching to summary.
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-26 16:21 UTC by Peter Gregory
Modified: 2012-04-27 08:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Gregory 2012-04-26 16:21:08 UTC
Application: kontact (4.7.3)
KDE Platform Version: 4.7.4 (4.7.4)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-12-generic i686
Distribution: Linux Mint 12 Lisa

-- Information about the crash:
Using calendar I had deleted a calendar I no longer needed. After this I then using the sidebar I selected summary. Kontact then crashed.

The crash does not seem to be reproducible.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0xb7806730 (LWP 3978))]

Thread 3 (Thread 0xb6a80b70 (LWP 3979)):
#0  0x00280416 in __kernel_vsyscall ()
#1  0x03a19a5c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0x05d5009c in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0x029e1883 in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#4  0x029e199f in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#5  0x03a15d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#6  0x05d4246e in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 2 (Thread 0xb6157b70 (LWP 3980)):
#0  0x00961d10 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0x00d127d5 in do_gettime (frac=0xb6157090, sec=0xb6157088) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x00de54b6 in QTimerInfoList::updateCurrentTime (this=0x8db03cc) at kernel/qeventdispatcher_unix.cpp:339
#4  0x00de5086 in timerSourceCheckHelper (src=0x8db0398) at kernel/qeventdispatcher_glib.cpp:150
#5  timerSourceCheckHelper (src=0x8db0398) at kernel/qeventdispatcher_glib.cpp:144
#6  0x0452af24 in g_main_context_check () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0x0452b8f0 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x0452bc2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x00de4b37 in QEventDispatcherGlib::processEvents (this=0x8f4e418, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#10 0x00db51dd in QEventLoop::processEvents (this=0xb61572c0, flags=...) at kernel/qeventloop.cpp:149
#11 0x00db5421 in QEventLoop::exec (this=0xb61572c0, flags=...) at kernel/qeventloop.cpp:201
#12 0x00cb890b in QThread::exec (this=0x8f4f8b8) at thread/qthread.cpp:498
#13 0x00cb89fb in QThread::run (this=0x8f4f8b8) at thread/qthread.cpp:565
#14 0x00cbb7b3 in QThreadPrivate::start (arg=0x8f4f8b8) at thread/qthread_unix.cpp:331
#15 0x03a15d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#16 0x05d4246e in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb7806730 (LWP 3978)):
[KCrash Handler]
#7  0x04d35304 in KCalCore::Todo::isCompleted (this=0x0) at ../../kcalcore/todo.cpp:266
#8  0x05555f32 in TodoSummaryWidget::popupMenu (this=0xb13e390, uid=...) at ../../../../kontact/plugins/korganizer/todosummarywidget.cpp:365
#9  0x0555675b in TodoSummaryWidget::qt_metacall (this=0xb13e390, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfa527e8) at ./todosummarywidget.moc:87
#10 0x00dbcb7d in metacall (argv=0xbfa527e8, idx=35, cl=QMetaObject::InvokeMetaMethod, object=0xb13e390) at kernel/qmetaobject.cpp:237
#11 QMetaObject::metacall (object=0xb13e390, cl=QMetaObject::InvokeMetaMethod, idx=35, argv=0xbfa527e8) at kernel/qmetaobject.cpp:232
#12 0x00dcba6a in QMetaObject::activate (sender=0xd54fee0, m=0x79c0e0, local_signal_index=6, argv=0xbfa527e8) at kernel/qobject.cpp:3278
#13 0x0066e205 in KUrlLabel::rightClickedUrl (this=0xd54fee0, _t1=...) at ./kurllabel.moc:249
#14 0x0066eab2 in KUrlLabel::mouseReleaseEvent (this=0xd54fee0, event=0xbfa52ddc) at ../../kdeui/widgets/kurllabel.cpp:131
#15 0x010a2fc8 in QWidget::event (this=0xd54fee0, event=0xbfa52ddc) at kernel/qwidget.cpp:8295
#16 0x014a8285 in QFrame::event (this=0xd54fee0, e=0xbfa52ddc) at widgets/qframe.cpp:557
#17 0x014ab200 in QLabel::event (this=0xd54fee0, e=0xbfa52ddc) at widgets/qlabel.cpp:1049
#18 0x0066cdc3 in KUrlLabel::event (this=0xd54fee0, event=0xbfa52ddc) at ../../kdeui/widgets/kurllabel.cpp:329
#19 0x01048d84 in notify_helper (e=0xbfa52ddc, receiver=0xd54fee0, this=0x8dafac8) at kernel/qapplication.cpp:4486
#20 QApplicationPrivate::notify_helper (this=0x8dafac8, receiver=0xd54fee0, e=0xbfa52ddc) at kernel/qapplication.cpp:4458
#21 0x0104edeb in QApplication::notify (this=0x8dafac8, receiver=0xd54fee0, e=0xbfa52ddc) at kernel/qapplication.cpp:4047
#22 0x00550971 in KApplication::notify (this=0xbfa53604, receiver=0xd54fee0, event=0xbfa52ddc) at ../../kdeui/kernel/kapplication.cpp:311
#23 0x00db619e in QCoreApplication::notifyInternal (this=0xbfa53604, receiver=0xd54fee0, event=0xbfa52ddc) at kernel/qcoreapplication.cpp:787
#24 0x01049d45 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#25 QApplicationPrivate::sendMouseEvent (receiver=0xd54fee0, event=0xbfa52ddc, alienWidget=0xd54fee0, nativeWidget=0xa0ccd10, buttonDown=0x19b3eb4, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#26 0x010d6304 in QETWidget::translateMouseEvent (this=0xa0ccd10, event=0xbfa5325c) at kernel/qapplication_x11.cpp:4571
#27 0x010d4e8d in QApplication::x11ProcessEvent (this=0xbfa53604, event=0xbfa5325c) at kernel/qapplication_x11.cpp:3693
#28 0x0110128c in x11EventSourceDispatch (s=0x8db4340, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#29 0x0452b25f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#30 0x0452b990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#31 0x0452bc2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#32 0x00de4ada in QEventDispatcherGlib::processEvents (this=0x8d8c280, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#33 0x01100e7a in QGuiEventDispatcherGlib::processEvents (this=0x8d8c280, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#34 0x00db51dd in QEventLoop::processEvents (this=0xbfa53564, flags=...) at kernel/qeventloop.cpp:149
#35 0x00db5421 in QEventLoop::exec (this=0xbfa53564, flags=...) at kernel/qeventloop.cpp:201
#36 0x00dba19d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#37 0x01046924 in QApplication::exec () at kernel/qapplication.cpp:3760
#38 0x0804ac91 in main (argc=) at ../../../kontact/src/main.cpp:218

Reported using DrKonqi
Comment 1 Laurent Montel 2012-04-27 08:04:01 UTC
Git commit 420f8ae6509e7e0a4c307be4516bd97e84d149b4 by Montel Laurent.
Committed on 27/04/2012 at 10:03.
Pushed by mlaurent into branch 'master'.

Fix Bug 298861 - Kontact crashes when switching to summary.

Todo can be null. Need to verify it

FIXED-IN: 4.8.4

M  +5    -4    kontact/plugins/korganizer/todosummarywidget.cpp

http://commits.kde.org/kdepim/420f8ae6509e7e0a4c307be4516bd97e84d149b4
Comment 2 Laurent Montel 2012-04-27 08:04:55 UTC
Git commit 2ec9a2f8eab21448f7f44c5bf9ff96139181f83d by Montel Laurent.
Committed on 27/04/2012 at 10:03.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 298861 - Kontact crashes when switching to summary.

Todo can be null. Need to verify it

FIXED-IN: 4.8.4
(cherry picked from commit 420f8ae6509e7e0a4c307be4516bd97e84d149b4)

M  +5    -4    kontact/plugins/korganizer/todosummarywidget.cpp

http://commits.kde.org/kdepim/2ec9a2f8eab21448f7f44c5bf9ff96139181f83d