Fix Bug 298861 - Kontact crashes when switching to summary.

Todo can be null. Need to verify it

FIXED-IN: 4.8.4
BUG: 298861